--- a/pom.xml
+++ b/pom.xml
@@ -7,18 +7,14 @@
     <artifactId>GitLabAdapter</artifactId>
     <version>1.0</version>
 
-    <dependencies>
+<!-- <dependencies>
         <dependency>
 	        <groupId>eu.uqasar.adapter.uQasarAdapter</groupId>
     	    <artifactId>uQasarAdapter</artifactId>
         	<version>2.0.2</version>
         </dependency>
-        <dependency>
-			<groupId>org.gitlab</groupId>
-			<artifactId>java-gitlab-api</artifactId>
-			<version>1.1.4</version>
-		</dependency>
     </dependencies>
+-->
     <build>
     <plugins>
         <plugin>
