--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,20 @@
     <artifactId>GitLabAdapter</artifactId>
     <version>1.0</version>
 
-<!-- <dependencies>
-        <dependency>
+ <dependencies>
+<!--    <dependency>
 	        <groupId>eu.uqasar.adapter.uQasarAdapter</groupId>
     	    <artifactId>uQasarAdapter</artifactId>
         	<version>2.0.2</version>
         </dependency>
-    </dependencies>
 -->
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.1</version>
+        </dependency>
+    </dependencies>
+
     <build>
     <plugins>
         <plugin>
